# smoothed_particle_hydrodynamics

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/ogl/: mod.rs  shader.rs  vao.rs
