[package]
name = "smoothed_particle_hydrodynamics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
glm = "0.2.3"
gl = "0.14.0"
imgui = "0.11.0"
imgui-rs = "1.47.0"
imgui-sdl2 = "0.15.2"
imgui-opengl-renderer = "0.12.1"
rand = "0.8.5"